# hema_scorecard_scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
hema_scorecard_scraper/: match_data.py  public_scraper.py  roses_export.py  scraper_console.py
